post_list에서 blog/post_list.html파일을 동적으로 렌더링    context에 'posts'키로 전달한 QuerySet을 순회하며 div요소를 반복해서 생성해준다.

--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,6 +11,12 @@
 <body>
 
     <h2>render worked well</h2>
+
+    {% for post in posts %}
+        <h1>{{post.title}}</h1>
+        <div> {{post.text}}</div>
+        <h3>{{post.created_date}}</h3>
+    {% endfor %}
 
 </body>
 </html>
