app/static폴더를 STATICFILES_DIRS에 추가    Bootstrap CSS파일을 static폴더에 추가    post_list.html에 Bootstrap CSS파일을 링크시키고 각 Post의 스타일을 지정

--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 
 <!doctype html>
 <html lang="en">
@@ -7,16 +9,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 </head>
 <body>
 
-    <h2>render worked well</h2>
+    <div class="container">
+        <h2 class = "mt-4 mb-4">Djnago-girls</h2>
 
-    {% for post in posts %}
-        <h1>{{post.title}}</h1>
-        <div> {{post.text}}</div>
-        <h3>{{post.created_date}}</h3>
-    {% endfor %}
-
+        {% for post in posts %}
+            <div class="card mb-3">
+                <div class="card-body mb-3">
+                    <h4 class="card-title">{{post.title}}</h4>
+                    <p class="card-text">{{post.text}}</p>
+                    <h6 class="card-subtitle text-muted mb-3 text-right">{{post.created_date}}</h6>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
