post_list.html에서는 전체 내용대신 최대 100자까지의 내용만 보여주도록 변경

--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -20,8 +20,8 @@
             <div class="card mb-3">
                 <div class="card-body mb-3">
                     <h4 class="card-title">{{post.title}}</h4>
-                    <p class="card-text">{{post.text}}</p>
-                    <h6 class="card-subtitle text-muted mb-3 text-right">{{post.created_date}}</h6>
+                    <p class="card-text ">{{post.text  | truncatechars:100 | linebreaksbr }}</p>
+                    <h6 class="card-subtitle text-muted mb-3 text-right ">{{post.created_date}}</h6>
                 </div>
             </div>
         {% endfor %}
