--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,21 +1,6 @@
-{% load static %}
+{% extends 'blog/base.html' %}
 
-
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-</head>
-<body>
-
-    <div class="container">
-        <h2 class = "mt-4 mb-4">Djnago-girls</h2>
-
+    {% block content %}
         {% for post in posts %}
             <div class="card mb-3">
                 <div class="card-body mb-3">
@@ -25,6 +10,5 @@
                 </div>
             </div>
         {% endfor %}
-    </div>
-</body>
-</html>
+    {% endblock %}
+
