--- a/app/blog/templates/blog/base.html
+++ b/app/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="container">
-        <h2 class = "mt-4 mb-4">Djnago-girls</h2>
+        <h2 class = "mt-4 mb-4"><a href="{% url 'post-list' %}">Djnago-girls</a></h2>
 
             {% block content %}
 
