--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
         {% for post in posts %}
             <div class="card mb-3">
                 <div class="card-body mb-3">
-                    <h4 class="card-title">{{post.title}}</h4>
+                    <h4 class="card-title"><a href="{% url 'post-detail' post.id  %}">{{post.title}}</a></h4>
                     <p class="card-text ">{{post.text  | truncatechars:100 | linebreaksbr }}</p>
                     <h6 class="card-subtitle text-muted mb-3 text-right ">{{post.created_date}}</h6>
                 </div>
