--- a/app/blog/templates/blog/post_create.html
+++ b/app/blog/templates/blog/post_create.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<form action="">
+
+
+<form action="" method = 'Post'>
+    {% csrf_token %}
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name = 'title' class = 'form-control'>
