post_delete view와 url을 연결    post_delete구현

--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -8,7 +8,13 @@
                     <p class="card-text ">{{post.text  | truncatechars:100 | linebreaksbr }}</p>
                     <h6 class="card-subtitle text-muted mb-3 text-right ">{{post.created_date}}</h6>
                 </div>
+
+                <div class="text-right">
+                    <button class="btn btn-danger mb-2 mr-2"><a href="{% url 'post-delete' post.id %}">삭제</a></button>
+                </div>
             </div>
+
+
         {% endfor %}
     {% endblock %}
 
