--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -9,8 +9,9 @@
                     <h6 class="card-subtitle text-muted mb-3 text-right ">{{post.created_date}}</h6>
                 </div>
 
-                <div class="text-right">
-                    <button class="btn btn-danger mb-2 mr-2"><a href="{% url 'post-delete' post.id %}">삭제</a></button>
+                <div>
+                    <button class="btn btn-danger mb-2 mr-2 float-left"><a href="{% url 'post-delete' post.id %}">삭제</a></button>
+                    <button class="btn btn-warning float-right"><a href="{% url 'post-edit' post.id %}"> 수정</a></button>
                 </div>
             </div>
 
